change option anfible

--- a/playbooks/UpdatePackages.yml
+++ b/playbooks/UpdatePackages.yml
@@ -8,7 +8,7 @@
       yum:
         name: postgresql-libs
         installroot: /cm/images/{{ images_name }}/
-        state: absent
+        state: removed
     - name: Install package for postgresql
       vars:
         packages:
@@ -18,6 +18,17 @@
         name: "{{ packages }}"
         #disablerepo: "epel,ol7_latest"
         installroot: /cm/images/{{ images_name }}/
+
+    - name: Install R - WISE - 3.5.1
+      vars:
+        packages3_5_1:
+          - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.5.1/microsoft-r-open/rpm/microsoft-r-open-mro-3.5.1.rpm
+          - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.5.1/microsoft-r-open/rpm/microsoft-r-open-foreachiterators-3.5.1.rpm
+          - /Sources/Software/Microsoft/Ropen/src/microsoft-r-open-3.5.1/microsoft-r-open/rpm/microsoft-r-open-mkl-3.5.1.rpm
+      yum:
+        name: "{{ packages3_5_1 }}"
+        installroot: /cm/images/{{ images_name }}/
+
     - name: Install R - WISE - 3.5.3
       vars:
         packages3_5_3:
