add rstudio package

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -99,7 +99,7 @@ inventory      = hosts
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
-#log_path = /var/log/ansible.log
+log_path = ./ansible.log
 
 # default module name for /usr/bin/ansible
 #module_name = command
@@ -200,7 +200,7 @@ command_warnings = False
 # by default callbacks are not loaded for /bin/ansible, enable this if you
 # want, for example, a notification or logging callback to also apply to
 # /bin/ansible runs
-#bin_ansible_callbacks = False
+bin_ansible_callbacks = True
 
 
 # don't like cows?  that's unfortunate.
