--- a/playbooks/UpdatePackages.yml
+++ b/playbooks/UpdatePackages.yml
@@ -14,3 +14,12 @@
         #disablerepo: "epel,ol7_latest"
         installroot: /cm/images/{{ images_name }}/
 
+    - name: Install R - RSTUDIO - 1.2.1335 
+      vars:
+         packagesRstudio:
+           - /Sources/Software/rstudio/rstudio-server/rstudio-server-rhel-pro-1.2.1335-1-x86_64.rpm 
+      yum:
+         name: "{{ packagesRstudio }}"
+         installroot: /cm/images/{{ images_name }}/
+
+
