--- a/UpdateImages.yml
+++ b/UpdateImages.yml
@@ -1,6 +1,6 @@
 ---
 - import_playbook: playbooks/prerequisites.yml
-- import_playbook: playbooks/DeletePackages.yml
-- import_playbook: playbooks/UpdatePackages.yml
+#- import_playbook: playbooks/DeletePackages.yml
+#- import_playbook: playbooks/UpdatePackages.yml
 - import_playbook: playbooks/UpdatePackages-R.yml
 #- import_playbook: playbooks/UpdateSecurity.yml
