--- a/playbooks/UpdatePackages-R.yml
+++ b/playbooks/UpdatePackages-R.yml
@@ -16,7 +16,7 @@
 
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.3/lib64/R/etc
          backup: yes
          owner: root
@@ -35,7 +35,7 @@
 
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.4/lib64/R/etc
          backup: yes
          owner: root
@@ -54,7 +54,7 @@
 
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.1/lib64/R/etc
          backup: yes
          owner: root
@@ -73,7 +73,7 @@
 
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.2/lib64/R/etc
          backup: yes
          owner: root
@@ -92,7 +92,7 @@
   
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.3/lib64/R/etc
          backup: yes
          owner: root
@@ -112,7 +112,7 @@
   
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.1/lib64/R/etc
          backup: yes
          owner: root
@@ -130,7 +130,7 @@
       
     - name: Copy file /R/etc
       copy:
-         src: /cm/shared/apps/UpdateImages/Scenario/R/WEB/src/opt/Ropen/R/etc
+         src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
          dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.3/lib64/R/etc
          backup: yes
          owner: root
