--- a/UpdateImages.yml
+++ b/UpdateImages.yml
@@ -3,6 +3,6 @@
 - import_playbook: playbooks/DeletePackages.yml
 - import_playbook: playbooks/UpdatePackages.yml
 - import_playbook: playbooks/UpdatePackages-R.yml
-#- import_playbook: playbooks/DeletePackages-ide.yml
-#- import_playbook: playbooks/UpdatePackages-ide.yml
+- import_playbook: playbooks/DeletePackages-ide.yml
+- import_playbook: playbooks/UpdatePackages-ide.yml
 #- import_playbook: playbooks/UpdateSecurity.yml
