--- a/playbooks/UpdatePackages-R.yml
+++ b/playbooks/UpdatePackages-R.yml
@@ -17,7 +17,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.3/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.3/lib64/R
          backup: yes
          owner: root
          group: root
@@ -36,7 +36,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.4/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/usr/lib64/microsoft-r/3.4/lib64/R
          backup: yes
          owner: root
          group: root
@@ -55,7 +55,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.1/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.1/lib64/R
          backup: yes
          owner: root
          group: root
@@ -74,7 +74,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.2/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.2/lib64/R
          backup: yes
          owner: root
          group: root
@@ -93,7 +93,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.3/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.4.3/lib64/R
          backup: yes
          owner: root
          group: root
@@ -113,7 +113,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.1/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.1/lib64/R
          backup: yes
          owner: root
          group: root
@@ -131,7 +131,7 @@
     - name: Copy file /R/etc
       copy:
          src: "{{ CI_PROJECT_DIR }}/src/opt/Ropen/R/etc"
-         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.3/lib64/R/etc
+         dest: /cm/images/{{ images_name }}/opt/microsoft/ropen/3.5.3/lib64/R
          backup: yes
          owner: root
          group: root
