--- a/playbooks/UpdatePackages.yml
+++ b/playbooks/UpdatePackages.yml
@@ -22,5 +22,20 @@
         name: "{{ packages }}"
         #disablerepo: "epel,ol7_latest"
         installroot: /cm/images/{{ images_name }}/
+  
+    - name: Install package for java-1.8.0-openjdk
+      vars:
+        packages:
+          - java-1.8.0-openjdk
+      yum:
+        name: "{{ packages }}"
+        installroot: /cm/images/{{ images_name }}/
 
+    - name: Install package for java-1.8.0-openjdk-devel
+      vars:
+        packages:
+          - java-1.8.0-openjdk-devel
+      yum:
+        name: "{{ packages }}"
+        installroot: /cm/images/{{ images_name }}/
 
