Update playbooks/UpdatePackages.yml, src/etc/rc.local files

--- a/playbooks/UpdatePackages.yml
+++ b/playbooks/UpdatePackages.yml
@@ -38,4 +38,13 @@
       yum:
         name: "{{ packages }}"
         installroot: /cm/images/{{ images_name }}/
+    
+    - name: Install - cm-ml-distdeps.x86_64
+      vars:
+         packagesRstudio:
+           - ccm-ml-distdeps.x86_64
+      yum:
+         name: "{{ packagesRstudio }}"
+         installroot: /cm/images/{{ images_name }}/
+
 
