--- a/playbooks/UpdatePackages-ide.yml
+++ b/playbooks/UpdatePackages-ide.yml
@@ -21,3 +21,6 @@
          owner: root
          group: root
          mode: '0644'
+
+     - name: RENAME - /cm/images/{{ images_name }}/etc/rstudio
+       command: creates=" mv /cm/images/{{ images_name }}/etc/rstudio /cm/images/{{ images_name }}/etc/rstudio.old
